/t/ndeck に itemSize, itemOffeset を追加
